// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeriesFunctionsSuggester completes functions with field names 1`] = `
Array [
  Object {
    "label": "avg(action)",
    "value": Object {
      "config": Object {
        "name": null,
      },
      "function": "avg(action)",
    },
  },
  Object {
    "label": "avg(controller)",
    "value": Object {
      "config": Object {
        "name": null,
      },
      "function": "avg(controller)",
    },
  },
  Object {
    "label": "avg(took_ms)",
    "value": Object {
      "config": Object {
        "name": null,
      },
      "function": "avg(took_ms)",
    },
  },
]
`;

exports[`SeriesFunctionsSuggester returns default functions 1`] = `
Array [
  Object {
    "label": "count()",
    "value": Object {
      "config": Object {
        "name": null,
      },
      "function": "count()",
    },
  },
  Object {
    "incomplete": true,
    "label": "avg(...)",
    "parameterNeeded": false,
    "value": "avg",
  },
  Object {
    "incomplete": true,
    "label": "min(...)",
    "parameterNeeded": false,
    "value": "min",
  },
  Object {
    "incomplete": true,
    "label": "max(...)",
    "parameterNeeded": false,
    "value": "max",
  },
]
`;

exports[`SeriesFunctionsSuggester updates functions when triggered: default functions after update 1`] = `
Array [
  Object {
    "label": "count()",
    "value": Object {
      "config": Object {
        "name": null,
      },
      "function": "count()",
    },
  },
  Object {
    "incomplete": true,
    "label": "card(...)",
    "parameterNeeded": false,
    "value": "card",
  },
  Object {
    "incomplete": true,
    "label": "stddev(...)",
    "parameterNeeded": false,
    "value": "stddev",
  },
]
`;

exports[`SeriesFunctionsSuggester updates functions when triggered: default functions before update 1`] = `
Array [
  Object {
    "label": "count()",
    "value": Object {
      "config": Object {
        "name": null,
      },
      "function": "count()",
    },
  },
  Object {
    "incomplete": true,
    "label": "avg(...)",
    "parameterNeeded": false,
    "value": "avg",
  },
  Object {
    "incomplete": true,
    "label": "min(...)",
    "parameterNeeded": false,
    "value": "min",
  },
  Object {
    "incomplete": true,
    "label": "max(...)",
    "parameterNeeded": false,
    "value": "max",
  },
]
`;
